# ai-data-assistant

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: deep_agent.py
app/db/: __init__.py  connection.py  schema_loader.py  schema_metadata.json  schema_metadata_generator.py
app/routes/: chats.py
app/services/: cache_service.py  db_executer.py  faiss_index.py  insight_agent.py  metadata_loader.py  response_builder.py  rule_engine.py  sql_generator.py  sql_validator.py  table_selector.py
app/utils/: config.py  logging.py  prompts.py  utils.py
app/vector_store/: faiss.index  table_metadata.json
frontend/: index.html  script.js  style.css
